<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/bground"
        android:layout_width="fill_parent"
        android:layout_height="180dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical" />

    <ImageView
        android:id="@+id/ImageDevlop"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="-70dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_cmd_dev" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/form_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:gravity="center_vertical|center"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:text="@string/make_data"
                android:textSize="22dp" />

            <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/corner_bground"
                android:gravity="center_vertical|center"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:padding="8dp"
                android:textStyle="bold|normal" />

            <EditText
                android:id="@+id/editPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/corner_bground"
                android:gravity="center_vertical|center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:padding="8dp"
                android:textAllCaps="false"
                android:textStyle="normal|bold" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/btn"
                android:gravity="center_vertical|center"
                android:onClick="addUser"
                android:padding="8dp"
                android:text="@string/add_user"
                android:textColor="#fff"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/edit_user"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:gravity="center_vertical|center"
                android:paddingTop="16dp"
                android:paddingBottom="10dp"
                android:text="@string/edit"
                android:textSize="22dp" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/corner_bground"
                android:gravity="center_vertical|center"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:textStyle="bold|italic" />


            <EditText
                android:id="@+id/editText5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/corner_bground"
                android:gravity="center_vertical|center"
                android:hint="@string/newname"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/btn"
                android:gravity="center_vertical|center"
                android:onClick="update"
                android:padding="8dp"
                android:text="@string/update"
                android:textColor="#fff"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="10dp"
                android:fontFamily="cursive"
                android:gravity="center_vertical|center"
                android:text="@string/remove"
                android:textSize="22dp" />

            <EditText
                android:id="@+id/editText6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/corner_bground"
                android:gravity="center_vertical|center"
                android:hint="@string/entername"
                android:inputType="textPersonName"
                android:padding="8dp" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/btn2"
                android:gravity="center_vertical|center"
                android:onClick="delete"
                android:padding="8dp"
                android:text="@string/delete"
                android:textColor="#fff"
                android:textStyle="bold" />

            <Button
                android:id="@+id/balik_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/btn"
                android:gravity="center_vertical|center"
                android:onClick="balikaje"
                android:padding="8dp"
                android:text="@string/asssr"
                android:textColor="#fff"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_by"
            android:layout_gravity="bottom"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dev_name_lengkap"
            android:textColor="#212121"
            android:layout_gravity="bottom"
            android:fontFamily="sans-serif-black"
            android:textSize="12sp"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/button2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/ic_circle"
            android:onClick="viewdata"
            android:padding="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_user"
            android:textColor="#fff"
            android:textStyle="bold"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>
</LinearLayout>